--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,85 +1,55 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" 
     tools:context=".MainActivity" >
-
-    <TableLayout
-        android:layout_width="wrap_content"
+    
+    <LinearLayout
+    	android:id="@+id/progresslayout"
+    	android:layout_width="fill_parent"
+    	android:layout_height="wrap_content"
+    	android:layout_alignParentBottom="true"
+    	android:orientation="horizontal">
+    
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" >
+        android:layout_weight="1"
+        android:background="@drawable/bg_blue"
+        android:contentDescription="@string/bg_blue"
+        android:onClick="bloodGlucose"
+        android:src="@drawable/bg_button" />
 
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/ins_orange"
+        android:contentDescription="@string/ins_orange"
+        android:onClick="insulin"
+        android:src="@drawable/insulin_button" />
 
-            <ImageView
-                android:id="@+id/imageView1"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:src="@drawable/bg_button"
-                android:background="@drawable/bg_blue"
-                android:onClick="bloodGlucose" />
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/wt_yellow_green"
+        android:contentDescription="@string/wt_yellow_green"
+        android:onClick="weight"
+        android:src="@drawable/weight_button" />
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:src="@drawable/bp_button"
-                android:background="@drawable/bp_green"
-                android:onClick="bloodPressure" />
-
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRow2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:src="@drawable/graph_button"
-                android:onClick="graph" />
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:src="@drawable/insulin_button"
-                android:background="@drawable/ins_orange"
-                android:onClick="insulin" />
-
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRow3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:src="@drawable/weight_button"
-                android:background="@drawable/wt_yellow_green"
-                android:onClick="weight" />
-
-            <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:src="@drawable/settings_button"
-                android:onClick="settings" />
-
-        </TableRow>
-    </TableLayout>
-
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/bp_green"
+        android:contentDescription="@string/bp_green"
+        android:onClick="bloodPressure"
+        android:src="@drawable/bp_button" />
+	</LinearLayout>
 </RelativeLayout>
