--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,5 +3,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-
+    
+    <!-- font sizes -->
+	<dimen name="swipe_view_title_fontsize">20sp</dimen>
+	<dimen name="table_entries">10sp</dimen>
 </resources>
