cleaned more code, added settings button

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -38,7 +38,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:background="@android:color/transparent"
-        android:src="@drawable/stefan" />
+        android:src="@drawable/stefan"
+        android:onClick="settings"/>
         	 
     <LinearLayout
     	android:id="@+id/progresslayout"
@@ -49,6 +50,7 @@
     
     <ImageView
         android:id="@+id/imageView1"
+        android:padding="10dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -59,6 +61,7 @@
 
     <ImageView
         android:id="@+id/imageView4"
+        android:padding="10dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -69,6 +72,7 @@
 
     <ImageView
         android:id="@+id/imageView5"
+        android:padding="10dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -79,6 +83,7 @@
 
     <ImageView
         android:id="@+id/imageView2"
+        android:padding="10dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
