--- a/res/layout/swipeview_fragment_right.xml
+++ b/res/layout/swipeview_fragment_right.xml
@@ -1,41 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
 
-    <ImageButton
-        android:id="@+id/profile"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="8dp"
-        android:background="@android:color/transparent"
-        android:scaleType="centerInside"
-        android:src="@drawable/stefan" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout1"
+    <com.androidplot.xy.XYPlot
+        android:id="@+id/mySimpleXYPlot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/profile"
-        android:layout_centerVertical="true"
-        android:orientation="vertical" >
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp" />
 
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/weekly_glucose"
-            android:textSize="@dimen/swipe_view_title_fontsize" />
-    
-        <ImageView
-        	android:id="@+id/imageView1"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:layout_marginTop="75dp"
-        	android:src="@drawable/graph" />
-    
-    </LinearLayout>
-</RelativeLayout>
+</FrameLayout>
