--- a/res/layout/activity_blood_glucose.xml
+++ b/res/layout/activity_blood_glucose.xml
@@ -60,7 +60,7 @@
                 </EditText>
 
                 <Button
-                    android:id="@+id/button1"
+                    android:id="@+id/submit_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
