--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
    	<!-- end swipe view -->
 
     <ImageButton
-        android:id="@+id/imageButton1"
+        android:id="@+id/profile_button"
         android:layout_margin="8dp"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -48,44 +48,48 @@
     	android:layout_alignParentBottom="true"
     	android:orientation="horizontal">
     
-    <ImageView
-        android:id="@+id/imageView1"
+    <ImageButton
+        android:id="@+id/bg_button"
         android:padding="10dp"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
+        android:scaleType="centerInside"
         android:layout_weight="1"
         android:background="@drawable/bg_blue"
         android:contentDescription="@string/bg_blue"
         android:onClick="bloodGlucose"
         android:src="@drawable/bg_button" />
 
-    <ImageView
-        android:id="@+id/imageView4"
+    <ImageButton
+        android:id="@+id/ins_button"
         android:padding="10dp"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
+        android:scaleType="centerInside"
         android:layout_weight="1"
         android:background="@drawable/ins_orange"
         android:contentDescription="@string/ins_orange"
         android:onClick="insulin"
-        android:src="@drawable/insulin_button" />
+        android:src="@drawable/ins_button" />
 
-    <ImageView
-        android:id="@+id/imageView5"
+    <ImageButton
+        android:id="@+id/weight_button"
         android:padding="10dp"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
+        android:scaleType="centerInside"
         android:layout_weight="1"
         android:background="@drawable/wt_yellow_green"
         android:contentDescription="@string/wt_yellow_green"
         android:onClick="weight"
-        android:src="@drawable/weight_button" />
+        android:src="@drawable/wt_button" />
 
-    <ImageView
-        android:id="@+id/imageView2"
+    <ImageButton
+        android:id="@+id/bp_button"
         android:padding="10dp"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
+        android:scaleType="centerInside"
         android:layout_weight="1"
         android:background="@drawable/bp_green"
         android:contentDescription="@string/bp_green"
