--- a/res/layout/swipeview_fragment_right.xml
+++ b/res/layout/swipeview_fragment_right.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragmentRight"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
