--- a/res/layout/swipeview_fragment_center.xml
+++ b/res/layout/swipeview_fragment_center.xml
@@ -1,7 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
+    android:orientation="vertical" >
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/title_center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="120dp"
+        android:gravity="center_horizontal"
+        android:textSize="@dimen/swipe_view_title_fontsize"
+        android:text="@string/title_center" />
+	
+	<TextView
+        android:id="@+id/average_bg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:textSize="@dimen/average_value" />
+    
+</LinearLayout>
