--- a/res/layout/activity_profile_setup.xml
+++ b/res/layout/activity_profile_setup.xml
@@ -88,5 +88,18 @@
 	    android:onClick="login"
 	    android:scaleType="centerInside"
 	    android:text="log in"/>
+
+	<ImageButton
+	    android:id="@+id/register"
+	    android:contentDescription="register"
+	    android:layout_width="90dp"
+	    android:layout_height="90dp"
+	    android:layout_alignParentBottom="true"
+	    android:layout_centerHorizontal="true"
+	    android:layout_marginBottom="0dp"
+	    android:background="#00000000"
+	    android:scaleType="centerInside"
+	    android:src="@drawable/register"
+	    android:onClick="register"/>
 	
 </RelativeLayout>
